<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue">

    <TextView
        android:id="@+id/questionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="50dp"
        android:text="@string/question_current_number"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/all_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/radius"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textStyle="bold"
        android:text="@string/numberOfQuestion"
        android:textColor="#0D58FE" />

    <TextView
        android:id="@+id/given_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/question1"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:background="@drawable/white_background">

        <Button
            android:id="@+id/true_button"
            android:layout_width="270dp"
            android:layout_height="58dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="61dp"
            android:layout_marginRight="61dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/firstOption"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/answer_button"
            android:layout_width="270dp"
            android:layout_height="58dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="61dp"
            android:layout_marginRight="61dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/third_option"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="270dp"
            android:layout_height="64dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="297dp"
            android:layout_marginEnd="61dp"
            android:layout_marginRight="61dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/next_question"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="270dp"
            android:layout_height="58dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="61dp"
            android:layout_marginRight="61dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/second_option"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>