<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gameover"
    android:background="@color/blue">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="199dp"
        android:text="@string/gameover"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/final_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="314dp"
        android:text="@string/final_score"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/play_again_btn"
        android:layout_width="228dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="275dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/play_again"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>